<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/home_flow"
        android:icon="@drawable/bottom_nav_home_selector"
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@id/explore_flow"
        android:icon="@drawable/bottom_nav_explore_selector"
        android:title="@string/bottom_nav_explore" />

    <item
        android:id="@id/upcoming_flow"
        android:icon="@drawable/bottom_nav_upcoming_selector"
        android:title="@string/bottom_nav_upcoming" />

    <item
        android:id="@id/my_library_flow"
        android:icon="@drawable/bottom_nav_my_library_selector"
        android:title="@string/bottom_nav_my_library" />

    <item
        android:id="@id/setting_flow"
        android:icon="@drawable/bottom_nav_setting_selector"
        android:title="@string/settings" />

</menu>