<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/medium_margin"
        android:elevation="@dimen/medium_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNavigateUp"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="@string/change_password"
        app:subtitleTextAppearance="@style/Kuro.H5"
        app:subtitleTextColor="?attr/colorOnBackground" />

    <ImageView
        android:id="@+id/btnNavigateUp"
        android:layout_width="@dimen/iconSizeLarge"
        android:layout_height="@dimen/iconSizeLarge"
        android:layout_gravity="center"
        android:contentDescription="@string/navigate_up"
        android:padding="@dimen/medium_padding"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_arrow_back_white"
        app:layout_constraintBottom_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolBar"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/labelOldPassword"
        style="@style/Kuro.body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/old_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintWidth_percent="0.35" />

    <EditText
        android:id="@+id/etOldPassword"
        style="@style/Kuro.body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/labelOldPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelOldPassword"
        app:layout_constraintTop_toTopOf="@id/labelOldPassword" />


    <TextView
        android:id="@+id/labelNewPassword"
        style="@style/Kuro.body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelOldPassword"
        app:layout_constraintWidth_percent="0.35" />

    <EditText
        android:id="@+id/etDisplayName"
        style="@style/Kuro.body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/labelNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelNewPassword"
        app:layout_constraintTop_toTopOf="@id/labelNewPassword" />

    <TextView
        android:id="@+id/labelReEnterPassword"
        style="@style/Kuro.body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/re_enter_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelNewPassword"
        app:layout_constraintWidth_percent="0.35" />

    <EditText
        android:id="@+id/etReEnterPassword"
        style="@style/Kuro.body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/labelReEnterPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelReEnterPassword"
        app:layout_constraintTop_toTopOf="@id/labelReEnterPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        style="@style/Kuro.H5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>