<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/medium_margin"
        android:elevation="@dimen/medium_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNavigateUp"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="@string/user_profile"
        app:subtitleTextAppearance="@style/Kuro.H5"
        app:subtitleTextColor="?attr/colorOnBackground" />

    <ImageView
        android:id="@+id/btnNavigateUp"
        android:layout_width="@dimen/iconSizeLarge"
        android:layout_height="@dimen/iconSizeLarge"
        android:layout_gravity="center"
        android:contentDescription="@string/navigate_up"
        android:padding="@dimen/medium_padding"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_arrow_back_white"
        app:layout_constraintBottom_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolBar"
        app:tint="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar">

        <ImageView
            android:id="@+id/avatarUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/avatar_place_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUserName"
            style="@style/Kuro.H6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_user_name"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatarUser" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/Kuro.body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUserName"
            tools:text="ABCDEF@gmail.com" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileContainer" />

    <TextView
        android:id="@+id/txtChangeProfile"
        style="@style/Kuro.H6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:padding="@dimen/large_padding"
        android:text="@string/change_profile"
        android:textColor="?attr/colorOnBackground"
        android:textStyle="normal"
        app:drawableStartCompat="@drawable/ic_rename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialDivider" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChangeProfile" />


    <TextView
        android:id="@+id/txtChangePassword"
        style="@style/Kuro.H6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:padding="@dimen/large_padding"
        android:text="@string/change_password"
        android:textColor="?attr/colorOnBackground"
        android:textStyle="normal"
        app:drawableStartCompat="@drawable/ic_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialDivider1" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChangePassword" />

    <TextView
        android:id="@+id/txtDeleteAccount"
        style="@style/Kuro.H6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:padding="@dimen/large_padding"
        android:text="@string/delete_account"
        android:textColor="?attr/colorOnBackground"
        android:textStyle="normal"
        app:drawableStartCompat="@drawable/ic_trash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialDivider2" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDeleteAccount" />

    <TextView
        android:id="@+id/txtLogOut"
        style="@style/Kuro.H6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:padding="@dimen/large_padding"
        android:text="@string/log_out"
        android:textColor="?attr/colorOnBackground"
        android:textStyle="normal"
        app:drawableStartCompat="@drawable/ic_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialDivider3" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogOut" />

</androidx.constraintlayout.widget.ConstraintLayout>